# SAINT-G

./: CITATION.cff  CLA.md  CONTRIBUTING.md  COPYRIGHT  PRIOR_ART.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
configs/: drm_g_marco1_3_5m.json  drm_g_marco2_3_5m_gradient_block1.json  drm_g_marco3_eval_payload.json  drm_g_marco4_eval_linear_progressive_real_tokens.json  drm_g_marco4_linear_progressive_cuda.json  drm_g_marco5b_retention_linear.json  drm_g_marco5e_phase_decision.json  huggingface_autograd_smoke.json  runtime_smoke.json
data/: phase13_tiny_corpus.txt  tinyshakespeare_phase13.txt
docs/: arquitetura.md  criterios_sucesso_falha.md  glossario_tecnico.md  hipoteses.md  paradigma_DRM-SAINT-G.md  roadmap.md
saint/: __init__.py  cli.py
scripts/: analyze_phase16_graft_svd.py  analyze_phase16_ntk_residual_saturation.py  benchmark_drm_g_marco3.py  benchmark_drm_g_marco4.py  benchmark_drm_g_marco5b.py  benchmark_drm_g_marco5e.py  benchmark_drm_g_phase16_graftblock.py  benchmark_drm_matrices.py  benchmark_huggingface_grid_phase13.py  benchmark_huggingface_multiseed_phase13.py  benchmark_huggingface_phase15_compare.py  benchmark_huggingface_phase15_efficiency.py  benchmark_huggingface_phase15_phi.py  benchmark_huggingface_phase15_train_only.py  benchmark_huggingface_validation_phase13.py  benchmark_linear_phase4.py
tests/: test_blocks_codebook.py  test_blocks_metrics.py  test_blocks_partition.py  test_blocks_signatures.py  test_checkpoint_scale_phase12.py  test_drm_grafting.py  test_file_line_limits.py  test_marco_names.py  (+9 more)
(+114 files in other folders)
