[project]
name = "drm-saint-g-training"
version = "0.1.0"
description = "DRM-SAINT-G experimental runtime for DRM grafting with DRM-SAINT-G-Phi"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
  "accelerate>=1.12",
  "safetensors>=0.4",
  "tokenizers>=0.15",
  "torch>=2.11",
  "transformers>=5.8.1",
]

[project.scripts]
saint = "saint.cli:main"
drm-saint-g = "saint.cli:main"

[tool.setuptools.packages.find]
include = ["saint*"]
